[i18n] Autodetect browser language and other improvements

--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -39,4 +39,16 @@
   left: 0;
   right: 0;
   bottom: 0;
+  .more-menu-toggler {
+    span {
+      @extend .rotate-animate;
+      @extend .rotate-0;
+      display: block;
+    }
+    &[aria-expanded='true'] {
+      span {
+        @extend .rotate-45;
+      }
+    }
+  }
 }
