--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -125,7 +125,7 @@
 
         <rv-i18n-switcher rv-show="menuOpen">
            <li class="nav-item" rv-each-langcode="langcodes">
-            <div class="nav-link" rv-text="langcode.code" rv-on-click="switch | args langcode" rv-class-active="langcode.active"></div>
+            <div class="nav-link text-uppercase" rv-text="langcode.code" rv-on-click="switch | args langcode" rv-class-active="langcode.active"></div>
            </li>
         </rv-i18n-switcher>
 
